# natlint

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  action.yml  dist-workspace.toml  flake.nix  justfile  natlint.toml
.github/workflows/: rust.yml
src/: lib.rs
src/cli/: cmd.rs  file_finder.rs  mod.rs
src/config/: check_file.rs  mod.rs
src/files/: finder.rs  mod.rs
src/linter/: disable.rs  mod.rs
src/parser/: comment.rs  errors.rs  item.rs  mod.rs  natspec.rs  process_file.rs
src/rules/: macros.rs  mod.rs  violation_error.rs
src/rules/contract/: missing_author.rs  missing_notice.rs  missing_title.rs  mod.rs  no_inheritdoc.rs  no_param.rs  no_return.rs  too_many_notice.rs  too_many_title.rs
src/rules/enum/: missing_author.rs  missing_notice.rs  missing_title.rs  missing_variant.rs  mod.rs  no_inheritdoc.rs  no_param.rs  no_return.rs  too_many_notice.rs  too_many_title.rs
src/rules/error/: missing_notice.rs  missing_param.rs  mod.rs  no_author.rs  no_inheritdoc.rs  no_return.rs  no_title.rs  too_many_notice.rs
src/rules/event/: missing_notice.rs  missing_param.rs  mod.rs  no_author.rs  no_inheritdoc.rs  no_return.rs  no_title.rs  too_many_notice.rs
src/rules/function/: missing_inheritdoc.rs  missing_notice.rs  missing_params.rs  missing_return.rs  mod.rs  no_author.rs  no_title.rs  only_inheritdoc.rs  require_inheritdoc.rs  too_many_inheritdoc.rs  too_many_notice.rs
src/rules/struct/: missing_author.rs  missing_notice.rs  missing_params.rs  missing_title.rs  mod.rs  no_inheritdoc.rs  no_return.rs  too_many_notice.rs  too_many_title.rs
src/rules/type/: mod.rs
src/rules/variable/: missing_notice.rs  (+8 more)
tests/: config_tests.rs  lib.rs  lint_tests.rs  parser.rs
tests/contracts/: TestContract.sol
tests/data/: TestContract.sol  TestContractWithDisable.sol  TestInterface.sol  TestMsgs.sol  full_config.toml  sparse_config.toml
