[package]
name = "natlint"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT"
repository = "https://github.com/srdtrk/natlint"
description = "A linter for Solidity natspec comments."

[dependencies]
clap = { version = "4.5", default-features = true, features = ["derive"] }
anyhow = "1.0"
syn-solidity = "0.8"
syn = "2.0"
derive_more = { version = "2.0", features = ["full"] }
thiserror = "2.0"
solang-parser = "0.3"
alloy-primitives = "0.8"
itertools = "0.14"
forge-fmt = "0.2"
eyre = "0.6"
tracing = "0.1"

[dev-dependencies]
quote = "1.0"
