[package]
name = "natlint"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/srdtrk/natlint"
description = "A linter for Solidity natspec comments."

[dependencies]
clap = { version = "4.5", default-features = true, features = ["derive"] }
derive_more = { version = "2.0", features = ["full"] }
thiserror = "2.0"
solang-parser = "0.3"
alloy-primitives = "1.1"
itertools = "0.14"
forge-fmt = "0.2"
eyre = "0.6"
tracing = "0.1"
glob = "0.3"
globset = "0.4"
toml = "0.8"
serde = "1.0"
line-col = "0.2"
regex = "1.11"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
